worked on promotion image

--- a/snippets/promotion-image.liquid
+++ b/snippets/promotion-image.liquid
@@ -2,6 +2,15 @@
 
     {% style %}
         /* Base image container styles */
+        .mega-menu__list.promotional-banner-menu {
+           padding-block: 15px;
+           grid-template-columns: 40% 60%;
+        }
+        .mega-menu__list.promotional-banner-menu .mega-menu-subcategory-list,
+        .mega-menu__list.promotional-banner-menu .mini-banner.mini-banner--with-image {
+          border-right: 1px solid #d9d9d9;
+          padding-inline: 50px;
+        }
         .image-container.mega-menu-image {
         position: relative;
         display: inline-block;
