--- a/sections/recommended-products.liquid
+++ b/sections/recommended-products.liquid
@@ -75,13 +75,15 @@
                                 </a>
                                 <div class="thumbnail-wrapper">
                                     {% for image in product.images limit: 15 %}
-                                        <img
-                                                class="thumbnail"
-                                                src="{{ image | image_url: width: 400 }}"
-                                                alt="{{ product.title }} thumbnail"
-                                                onclick="this.closest('.product-card').querySelector('.main-image').src = this.src"
-                                                width="50px" height="50px"
-                                        />
+                                        <div class="thumbnail-image-wrapper">
+                                            <img
+                                                    class="thumbnail"
+                                                    src="{{ image | image_url: width: 400 }}"
+                                                    alt="{{ product.title }} thumbnail"
+                                                    onclick="this.closest('.product-card').querySelector('.main-image').src = this.src"
+                                                    width="50px" height="50px"
+                                            />
+                                        </div>
                                     {% endfor %}
 
                                 </div>
