sections/product-tab.liquid

--- a/sections/product-tab.liquid
+++ b/sections/product-tab.liquid
@@ -298,6 +298,7 @@
             if (counter > 0) {
               let lastVisible = thumbnails.length - counter - 1;
               thumbnails[lastVisible].style.display = 'none';
+              counter = counter + 1;
             }
 
 
