featured-collection-grid

--- a/snippets/collection-list.liquid
+++ b/snippets/collection-list.liquid
@@ -125,12 +125,12 @@
         margin-bottom: 30px;
     }
 
-    .collection-list {
+    .collection-list-container .collection-list {
         display: grid;
     }
 
 
-    .collection-card {
+    .collection-list-container .collection-card {
         border-radius: 8px;
     }
 
@@ -162,7 +162,7 @@
     }
 
 
-    .collection-list {
+    .collection-list-container .collection-list {
                     display: grid;
                      }
     @media screen and (min-width: 992px){
@@ -197,7 +197,7 @@
             .swiper-button-next {
                 right: 0;
             }
-    .collection-list {
+    .collection-list-container .collection-list {
                 grid-template-columns: repeat(5, 1fr);
                 gap: 2rem;
             }
@@ -207,7 +207,7 @@
      .swiper-button-next {
              display: none;
              }
-        .collection-list {
+        .collection-list-container .collection-list {
                     grid-template-columns: repeat(3, 1fr);
                     gap: 1rem;
                 }
